--- a/packages/google-cloud-functions/package.json
+++ b/packages/google-cloud-functions/package.json
@@ -1,4 +1,5 @@
 {
   "name": "@serverless-api/google-cloud-functions",
-  "main": "./src/index.ts"
+  "main": "./src/index.ts",
+  "version": "0.0.0"
 }
