--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
+    "lerna": "^6.1.0",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
