--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -1,5 +1,13 @@
 {
   "name": "@serverless_api/router",
   "main": "./src/index.ts",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "scripts": {
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.2.4",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3"
+  }
 }
